--- a/oss_data/oss_demo_projector_config.json
+++ b/oss_data/oss_demo_projector_config.json
@@ -2,48 +2,88 @@
   "embeddings": [
     {
       "tensorName": "Word2Vec 10K",
-      "tensorShape": [10000, 200],
+      "tensorShape": [
+        10000,
+        200
+      ],
       "tensorPath": "oss_data/word2vec_10000_200d_tensors.bytes",
       "metadataPath": "oss_data/word2vec_10000_200d_labels.tsv"
     },
     {
       "tensorName": "Word2Vec All",
-      "tensorShape": [71291, 200],
+      "tensorShape": [
+        71291,
+        200
+      ],
       "tensorPath": "oss_data/word2vec_full_200d_tensors.bytes",
       "metadataPath": "oss_data/word2vec_full_200d_labels.tsv",
       "bookmarksPath": "oss_data/word2vec_full_bookmarks.txt"
     },
     {
       "tensorName": "Mnist with images",
-      "tensorShape": [10000, 784],
+      "tensorShape": [
+        10000,
+        784
+      ],
       "tensorPath": "oss_data/mnist_10k_784d_tensors.bytes",
       "metadataPath": "oss_data/mnist_10k_784d_labels.tsv",
       "sprite": {
         "imagePath": "oss_data/mnist_10k_sprite.png",
-        "singleImageDim": [28, 28]
+        "singleImageDim": [
+          28,
+          28
+        ]
       }
     },
     {
       "tensorName": "Iris",
-      "tensorShape": [150, 4],
+      "tensorShape": [
+        150,
+        4
+      ],
       "tensorPath": "oss_data/iris_tensors.bytes",
       "metadataPath": "oss_data/iris_labels.tsv"
     },
     {
       "tensorName": "GNMT Interlingua",
-      "tensorShape": [9978, 1024],
+      "tensorShape": [
+        9978,
+        1024
+      ],
       "tensorPath": "oss_data/bnmt_enjako_interlingua_10k_1024_tensors.bytes",
       "metadataPath": "oss_data/bnmt_enjako_interlingua_10k_1024_metadata.tsv",
       "bookmarksPath": "oss_data/bnmt_enjako_interlingua_10k_1024_bookmarks.txt"
     },
     {
       "tensorName": "Cats Vs Dogs",
-      "tensorShape": [100, 512],
+      "tensorShape": [
+        100,
+        512
+      ],
       "tensorPath": "oss_data/tensor.bytes",
       "metadataPath": "oss_data/labels.tsv",
       "sprite": {
         "imagePath": "oss_data/sprite.png",
-        "singleImageDim": [100, 100]
+        "singleImageDim": [
+          100,
+          100
+        ]
+      }
+    },
+    {
+      "tensorName": "NFT",
+      "tensorShape": [
+        500,
+        768
+      ],
+      "tensorPath": "oss_data/embedding.ckpt",
+      "metadataPath": "oss_data/metadata.tsv",
+      "sprite": {
+        "imagePath": "oss_data/sprites_nft.png",
+        "singleImageDim": [
+          21,
+          21
+        ]
       }
     }
   ],
